# face-id

./: Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.docker/: .dockerignore  app.dockerfile  compose.yml  frontend.dockerfile
app/: __init__.py
app/config/: environment.py
app/controllers/: enroll.py  identify.py
app/helpers/: websocket.py
app/models/: enroll.py  identify.py
app/repositories/: templates.py
app/services/: engine.py  enroll.py  identify.py  matching.py  vision.py
frontend/: enroll.html  index.html  styles.css
