[project]
name = "face-id"
version = "0.1.0"
description = ""
authors = [
    {name = "masioware",email = "marcioedumartinez@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "onnxruntime-gpu (>=1.24.2,<2.0.0)",
    "nvidia-cudnn-cu12 (>=9.19.0.56,<10.0.0.0)"
]

[tool.fastapi]
entrypoint = "app:create_app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
